# llm-zoomcamp-2026-vector-search

./: .gitignore  .pyproject.toml  README.md  main.py  pyproject.toml  vector_search.ipynb  vector_search_persistent.ipynb  vector_search_pgvector.ipynb
